# -*- python -*-

load("@drake//tools/skylark:py.bzl", "py_library")

licenses = ["notice"]  # MIT

package(
    default_visibility = ["//visibility:public"],
)

py_library(
    name = "pyntcloud_py",
    srcs = glob([
        "pyntcloud/*.py",
    ]) or fail("No match"),
    data = glob(["pyntcloud/*.html", "pyntcloud/*.js"]),
    imports = [
        "pyntcloud",
    ],
)
